# Rust-Practice

./: .gitignore
WebGPUPractice/: Cargo.toml
WebGPUPractice/src/: main.rs
chars_testing/: Cargo.toml
chars_testing/src/: main.rs
control_flow_practice/src/: main.rs
currying_test/: Cargo.toml
function_practice/: Cargo.toml
function_practice/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
practice_testing_concepts/: Cargo.toml
practice_testing_concepts/src/: fib.rs  main.rs
restaurant/src/: lib.rs
struct_practice/src/: data_struct.rs
variable_practice/: Cargo.toml
variable_practice/src/: main.rs
web_gpu_practice/: Cargo.toml  build.rs
web_gpu_practice/src/: main.rs  shader.wgsl  state_lib.rs  tutorial_window.rs
web_gpu_practice/src/tutorial_window/: model.rs  resources.rs  texture.rs
wgpu_compute_practice/: Cargo.toml
wgpu_compute_practice/src/: main.rs  shader.wgsl
