[package]
name = "wgpu_compute_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19"
env_logger = "0.11"
pollster = "0.3.0"
futures-intrusive = "0.5"
bytemuck = { version = "1.15", features = ["derive"]}